--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,11 @@ code {
   justify-content: flex-start;
   gap: 1rem;
 }
+.control-row select{
+display: flex;
+text-align: center;
+
+}
 
 .button {
   font: inherit;
