--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,12 @@ code {
 /* Modal & Cart END */
 
 /* Control Form  */
+/* .form-signup form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+} */
 
 .checkout-button {
   display: flex;
